# hackathon-example-policies

./: .gitignore  .pre-commit-config.yaml  00_setup.ipynb  LICENSE  README.md  pixi.toml  pyproject.toml  train.sh
docs/: 01_connect_vscode.md  02_dataset_creation.md  03_using_lerobot.md  04_upload_and_visualize_datasets.md  05_replay_data.md  README.md  action_spaces.md  code_overview.md  connect_vscode.md  dataset_creation.md  using_lerobot.md
notebooks/: 00_setup.ipynb  01_create_dataset.ipynb  01_create_dataset_synced.ipynb  01_dataset_creation.ipynb  01b_create_dataset_synced.ipynb  02_train_model_simple.ipynb  03_deploy_policy.ipynb  03a_deploy_policy.ipynb  03b_deploy_policy_with_recording.ipynb  03b_deploy_policy_with_visualization.ipynb  03c_deploy_policy_with_recording.ipynb  04_deploy_from_dataset.ipynb  04_visual_eval.ipynb  05_replay_episode.ipynb  05_validate_policy.ipynb  05_validate_with_plot.ipynb  06_validate_policy.ipynb  06_visualize_dataset.ipynb  08_dataset_frequency_analysis.ipynb  08_visualize_initial_frames.ipynb  09_predeploy_camera_check.ipynb  99_fake_deploy_policy.ipynb  compare_dataset_vs_live.ipynb  debug_deploy_minimal.ipynb  train.py  train_ditflow_image.py  train_smolvla_sort.py
scripts/: 01_create_dataset.py  02_train_model_simple.py  03_deploy_policy.py  analyze_tcp_repetitions.py  create_video.py  demo_list.txt  finetune.py  hackathon.md  merge_datasets.py  play_video.ipynb  plot_tcp_repetitions.py  push_dataset.py  set_robot_on_a_given_position.py  train.py  train_smolvla_pick.sh  train_smolvla_pick_reproduce.sh  (+4 more)
(+216 files in other folders)
